Atualizações em dashboard, guia de usuario, bloqueado...

--- a/app/bloqueado.html
+++ b/app/bloqueado.html
@@ -216,20 +216,7 @@
                     ao DataCerta. Todos os seus dados serão restaurados imediatamente.</p>
             </div>
 
-            <!-- Opções de planos -->
-            <div class="plan-comparison" id="planSection">
-                <h4>Escolha um plano para continuar</h4>
-                <div class="plan-options" id="planOptions">
-                    <div class="plan-option" onclick="selecionarPlano('starter')">
-                        <div class="plan-name">Starter</div>
-                        <div class="plan-price">R$ 97<span>/mês</span></div>
-                    </div>
-                    <div class="plan-option recommended" onclick="selecionarPlano('basico')">
-                        <div class="plan-name">Básico</div>
-                        <div class="plan-price">R$ 197<span>/mês</span></div>
-                    </div>
-                </div>
-            </div>
+
 
             <!-- Ações -->
             <div class="blocked-actions">
@@ -244,7 +231,7 @@
         </div>
 
         <div class="blocked-footer">
-            <p>Dúvidas? <a href="mailto:datacerta.contato@gmail.com">Entre em contato</a></p>
+            <p>Dúvidas? <a href="../help/contato.html">Entre em contato</a></p>
         </div>
     </div>
 
