--- a/help/guia-usuario.html
+++ b/help/guia-usuario.html
@@ -686,7 +686,7 @@
                         <h3>Indicadores Principais (KPIs)</h3>
                         <p>Na parte superior você encontra os principais indicadores:</p>
                         <ul>
-                            <li><strong>Total em Estoque:</strong> Quantidade total de produtos cadastrados</li>
+                            <li><strong>Total Vendidos:</strong> Quantidade total de produtos vendidos</li>
                             <li><strong>Em Alerta:</strong> Produtos próximos do vencimento</li>
                             <li><strong>Críticos:</strong> Produtos que vencem em poucos dias</li>
                             <li><strong>Vencidos:</strong> Produtos com data expirada</li>
@@ -788,28 +788,6 @@
                 <div class="step-card">
                     <div class="step-number">2</div>
                     <div class="step-content">
-                        <h3>Adicionar Novo Estoque</h3>
-                        <p>Clique no botão <strong>"Adicionar Estoque"</strong> para registrar manualmente:</p>
-                        <ul>
-                            <li>Selecione a loja e o local</li>
-                            <li>Escolha o produto do catálogo</li>
-                            <li>Informe quantidade e valor unitário</li>
-                            <li>Digite a data de validade</li>
-                        </ul>
-                        <div class="info-box">
-                            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                                <circle cx="12" cy="12" r="10" />
-                                <path d="M12 16v-4M12 8h.01" />
-                            </svg>
-                            <span>Para registros mais rápidos, use a opção "Nova Coleta" com leitor de código de
-                                barras!</span>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="step-card">
-                    <div class="step-number">3</div>
-                    <div class="step-content">
                         <h3>Ações sobre Produtos</h3>
                         <p>Na coluna "Ações" de cada produto você pode:</p>
                         <ul>
@@ -821,7 +799,7 @@
                 </div>
 
                 <div class="step-card">
-                    <div class="step-number">4</div>
+                    <div class="step-number">3</div>
                     <div class="step-content">
                         <h3>Abas: Lojas vs Depósito</h3>
                         <p>Use as abas para alternar entre:</p>
