--- a/app/dashboard.html
+++ b/app/dashboard.html
@@ -800,15 +800,33 @@
                     <span class="notification-badge"
                         style="display: none; position: absolute; top: 2px; right: 2px; background: #EF4444; color: white; font-size: 10px; font-weight: 600; min-width: 16px; height: 16px; border-radius: 50%; align-items: center; justify-content: center;">0</span>
                 </button>
-                <button class="btn btn-outline" onclick="exportarRelatorio()">
-                    <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" width="16" height="16"
-                        style="margin-right: 8px;">
-                        <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"></path>
-                        <polyline points="7 10 12 15 17 10"></polyline>
-                        <line x1="12" y1="15" x2="12" y2="3"></line>
-                    </svg>
-                    Exportar
-                </button>
+                <div class="export-dropdown" style="position: relative; display: inline-block;">
+                    <button class="btn btn-outline" onclick="toggleExportMenu()">
+                        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" width="16"
+                            height="16" style="margin-right: 8px;">
+                            <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"></path>
+                            <polyline points="7 10 12 15 17 10"></polyline>
+                            <line x1="12" y1="15" x2="12" y2="3"></line>
+                        </svg>
+                        Exportar ▼
+                    </button>
+                    <div id="exportMenu" style="display: none; position: absolute; top: 100%; right: 0; background: var(--bg-card); 
+                         border: 1px solid var(--border-secondary); border-radius: 8px; box-shadow: 0 4px 12px rgba(0,0,0,0.15); 
+                         min-width: 160px; z-index: 100; margin-top: 4px;">
+                        <button onclick="exportarPDF()"
+                            style="display: flex; align-items: center; gap: 8px; width: 100%; padding: 12px 16px; 
+                                border: none; background: none; cursor: pointer; font-size: 14px; color: var(--text-primary); text-align: left;"
+                            onmouseover="this.style.background='#f5f5f5'" onmouseout="this.style.background='none'">
+                            📄 Exportar PDF
+                        </button>
+                        <button onclick="exportarExcel()" style="display: flex; align-items: center; gap: 8px; width: 100%; padding: 12px 16px; 
+                                border: none; background: none; cursor: pointer; font-size: 14px; color: var(--text-primary); text-align: left;
+                                border-top: 1px solid var(--border-secondary);"
+                            onmouseover="this.style.background='#f5f5f5'" onmouseout="this.style.background='none'">
+                            📊 Exportar Excel
+                        </button>
+                    </div>
+                </div>
             </div>
         </header>
 
@@ -1109,7 +1127,8 @@
     </main>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.8.2/jspdf.plugin.autotable.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <script src="../js/supabase.js"></script>
     <script src="js/app.js"></script>
