--- a/app/dashboard.html
+++ b/app/dashboard.html
@@ -817,13 +817,13 @@
                             style="display: flex; align-items: center; gap: 8px; width: 100%; padding: 12px 16px; 
                                 border: none; background: none; cursor: pointer; font-size: 14px; color: var(--text-primary); text-align: left;"
                             onmouseover="this.style.background='#f5f5f5'" onmouseout="this.style.background='none'">
-                            📄 Exportar PDF
+                            Exportar PDF
                         </button>
                         <button onclick="exportarExcel()" style="display: flex; align-items: center; gap: 8px; width: 100%; padding: 12px 16px; 
                                 border: none; background: none; cursor: pointer; font-size: 14px; color: var(--text-primary); text-align: left;
                                 border-top: 1px solid var(--border-secondary);"
                             onmouseover="this.style.background='#f5f5f5'" onmouseout="this.style.background='none'">
-                            📊 Exportar Excel
+                            Exportar Excel
                         </button>
                     </div>
                 </div>
@@ -1127,7 +1127,7 @@
     </main>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.8.2/jspdf.plugin.autotable.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <script src="../js/supabase.js"></script>
