--- a/app/validade.html
+++ b/app/validade.html
@@ -285,12 +285,13 @@
                             <th>Qtd</th>
                             <th>Validade</th>
                             <th>Status</th>
+                            <th>Usuário</th>
                             <th>Ações</th>
                         </tr>
                     </thead>
                     <tbody id="estoqueTable">
                         <tr>
-                            <td colspan="8" style="text-align: center; padding: 40px;">Carregando...</td>
+                            <td colspan="9" style="text-align: center; padding: 40px;">Carregando...</td>
                         </tr>
                     </tbody>
                 </table>
