--- a/help/faq.html
+++ b/help/faq.html
@@ -491,7 +491,8 @@
                     <div class="faq-answer-content">
                         <strong>Sim!</strong> O DataCerta é totalmente responsivo e funciona em qualquer dispositivo.
                         Além disso, a função <strong>Nova Coleta</strong> é otimizada para dispositivos móveis,
-                        permitindo usar a câmera do celular como leitor de código de barras.
+                        permitindo usar a câmera do celular como leitor de código de barras. Também temo o aplicativo
+                        mobile. Basta apenas baixar, instalar e começar a usar.
                     </div>
                 </div>
             </div>
@@ -655,8 +656,6 @@
                         O sistema é compatível com:
                         <ul>
                             <li><strong>Câmera do celular:</strong> Use a câmera para escanear (recomendado)</li>
-                            <li><strong>Leitores USB:</strong> Qualquer leitor que funcione como teclado</li>
-                            <li><strong>Leitores Bluetooth:</strong> Conecte ao celular ou tablet</li>
                         </ul>
                     </div>
                 </div>
@@ -673,13 +672,10 @@
                 </button>
                 <div class="faq-answer">
                     <div class="faq-answer-content">
-                        Se o produto não está cadastrado, o sistema irá solicitar que você informe:
-                        <ul>
-                            <li>Descrição do produto</li>
-                            <li>Categoria</li>
-                            <li>Valor unitário</li>
-                        </ul>
-                        O produto será cadastrado automaticamente e ficará disponível para futuras coletas.
+                        Se o produto não estiver cadastrado no banco de dados, o sistema não conseguirá coletar a
+                        validade.
+                        Nesse caso, acesse a página <strong>"Produtos"</strong>, cadastre o item que está faltando e,
+                        em seguida, faça a coleta novamente.
                         <div class="tip-box">
                             <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                                 <circle cx="12" cy="12" r="10" />
@@ -703,8 +699,8 @@
                 <div class="faq-answer">
                     <div class="faq-answer-content">
                         Atualmente, é necessário estar conectado à internet para realizar coletas, pois os dados
-                        são salvos em tempo real na nuvem. Recomendamos verificar a conexão antes de iniciar o
-                        inventário.
+                        são salvos em tempo real na nuvem. Recomendamos verificar a conexão antes de iniciar a coleta de
+                        validades.
                     </div>
                 </div>
             </div>
@@ -721,8 +717,7 @@
                 <div class="faq-answer">
                     <div class="faq-answer-content">
                         Você pode digitar a data no formato <code>dd/mm/aaaa</code> ou usar o calendário que aparece
-                        ao tocar no campo. Para maior agilidade, alguns leitores permitem escanear datas impressas
-                        nas embalagens.
+                        ao tocar no campo.
                     </div>
                 </div>
             </div>
@@ -738,6 +733,25 @@
                     </svg>
                 </div>
                 Catálogo de Produtos
+            </div>
+
+            <div class="faq-item">
+                <button class="faq-question">
+                    O que é Código SKU?
+                    <span class="faq-toggle">
+                        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <polyline points="6 9 12 15 18 9" />
+                        </svg>
+                    </span>
+                </button>
+                <div class="faq-answer">
+                    <div class="faq-answer-content">
+                        O código SKU é o <strong>código interno utilizado pela sua empresa</strong> para identificar os
+                        produtos.
+                        Além do código de barras da embalagem (EAN, geralmente com 13 dígitos), o SKU é o código usado
+                        pelo sistema de PDV ou ERP para controlar vendas, estoque e demais processos internos.
+                    </div>
+                </div>
             </div>
 
             <div class="faq-item">
