--- a/app/dashboard.html
+++ b/app/dashboard.html
@@ -813,15 +813,9 @@
                     <div id="exportMenu" style="display: none; position: absolute; top: 100%; right: 0; background: var(--bg-card); 
                          border: 1px solid var(--border-secondary); border-radius: 8px; box-shadow: 0 4px 12px rgba(0,0,0,0.15); 
                          min-width: 160px; z-index: 100; margin-top: 4px;">
-                        <button onclick="exportarPDF()"
+                        <button onclick="exportarExcel()"
                             style="display: flex; align-items: center; gap: 8px; width: 100%; padding: 12px 16px; 
                                 border: none; background: none; cursor: pointer; font-size: 14px; color: var(--text-primary); text-align: left;"
-                            onmouseover="this.style.background='#f5f5f5'" onmouseout="this.style.background='none'">
-                            Exportar PDF
-                        </button>
-                        <button onclick="exportarExcel()" style="display: flex; align-items: center; gap: 8px; width: 100%; padding: 12px 16px; 
-                                border: none; background: none; cursor: pointer; font-size: 14px; color: var(--text-primary); text-align: left;
-                                border-top: 1px solid var(--border-secondary);"
                             onmouseover="this.style.background='#f5f5f5'" onmouseout="this.style.background='none'">
                             Exportar Excel
                         </button>
@@ -1121,6 +1115,69 @@
                 </div>
                 <div class="chart-container">
                     <canvas id="chartRankingPerdas"></canvas>
+                </div>
+            </div>
+        </div>
+
+        <!-- Seção de Desempenho de Usuários -->
+        <h2
+            style="font-size: 18px; font-weight: 600; color: var(--text-primary); margin: 24px 0 16px 0; display: flex; align-items: center; gap: 8px;">
+            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" width="20" height="20"
+                style="color: #6366F1;">
+                <path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2" />
+                <circle cx="9" cy="7" r="4" />
+                <path d="M23 21v-2a4 4 0 0 0-3-3.87" />
+                <path d="M16 3.13a4 4 0 0 1 0 7.75" />
+            </svg>
+            Desempenho de Usuários
+        </h2>
+        <div class="dashboard-grid" style="grid-template-columns: repeat(3, 1fr);">
+            <!-- Card: Mais Coletas -->
+            <div class="chart-card">
+                <div class="chart-header">
+                    <span class="chart-title" style="display: flex; align-items: center; gap: 6px;">
+                        <svg viewBox="0 0 24 24" fill="none" stroke="#10B981" stroke-width="2" width="16" height="16">
+                            <polyline points="23 6 13.5 15.5 8.5 10.5 1 18" />
+                            <polyline points="17 6 23 6 23 12" />
+                        </svg>
+                        Mais Coletas
+                    </span>
+                </div>
+                <div id="usuariosColetas" style="padding: 12px 0;">
+                    <div style="text-align: center; color: var(--text-muted); padding: 20px;">Carregando...</div>
+                </div>
+            </div>
+
+            <!-- Card: Mais Perdas Registradas -->
+            <div class="chart-card">
+                <div class="chart-header">
+                    <span class="chart-title" style="display: flex; align-items: center; gap: 6px;">
+                        <svg viewBox="0 0 24 24" fill="none" stroke="#EF4444" stroke-width="2" width="16" height="16">
+                            <circle cx="12" cy="12" r="10" />
+                            <line x1="12" y1="8" x2="12" y2="12" />
+                            <line x1="12" y1="16" x2="12.01" y2="16" />
+                        </svg>
+                        Mais Perdas Registradas
+                    </span>
+                </div>
+                <div id="usuariosPerdas" style="padding: 12px 0;">
+                    <div style="text-align: center; color: var(--text-muted); padding: 20px;">Carregando...</div>
+                </div>
+            </div>
+
+            <!-- Card: Menos Ativos -->
+            <div class="chart-card">
+                <div class="chart-header">
+                    <span class="chart-title" style="display: flex; align-items: center; gap: 6px;">
+                        <svg viewBox="0 0 24 24" fill="none" stroke="#F59E0B" stroke-width="2" width="16" height="16">
+                            <circle cx="12" cy="12" r="10" />
+                            <polyline points="12 6 12 12 16 14" />
+                        </svg>
+                        Menos Ativos
+                    </span>
+                </div>
+                <div id="usuariosMenosAtivos" style="padding: 12px 0;">
+                    <div style="text-align: center; color: var(--text-muted); padding: 20px;">Carregando...</div>
                 </div>
             </div>
         </div>
