--- a/app/validade.html
+++ b/app/validade.html
@@ -465,9 +465,9 @@
                 <form id="formEstoque">
                     <input type="hidden" id="estoqueId">
                     <div class="form-row">
-                        <div class="form-group">
-                            <label for="estoqueLoja">Loja *</label>
-                            <select id="estoqueLoja" required></select>
+                        <div class="form-group" id="formGroupLoja">
+                            <label for="estoqueLoja" id="labelEstoqueLoja">Loja *</label>
+                            <select id="estoqueLoja"></select>
                         </div>
                         <div class="form-group">
                             <label for="estoqueLocal">Local</label>
