--- a/app/perdas.html
+++ b/app/perdas.html
@@ -196,7 +196,7 @@
                         <th>Valor (R$)</th>
                         <th>Motivo</th>
                         <th>Data</th>
-                        <th>Observação</th>
+                        <th>Usuário</th>
                     </tr>
                 </thead>
                 <tbody id="perdasTable">
