--- a/app/perdas.html
+++ b/app/perdas.html
@@ -197,11 +197,12 @@
                         <th>Motivo</th>
                         <th>Data</th>
                         <th>Usuário</th>
+                        <th>Ações</th>
                     </tr>
                 </thead>
                 <tbody id="perdasTable">
                     <tr>
-                        <td colspan="8" style="text-align: center; padding: 40px;">Carregando...</td>
+                        <td colspan="9" style="text-align: center; padding: 40px;">Carregando...</td>
                     </tr>
                 </tbody>
             </table>
